// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > with 2 to 5 pages > should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  margin-right: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-3 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.circuit-4 {
  min-width: 34px;
  padding: 4px;
  margin-right: 4px;
}

li:last-child .circuit-4 {
  margin-right: 0;
}

.circuit-14 {
  margin-left: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<nav
  aria-label="Pagination"
  class="circuit-0"
  role="navigation"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-1"
    disabled=""
    title="Previous"
  >
    <span
      class="_spinner_892426 circuit-2"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Previous
      </span>
    </span>
  </button>
  <ol
    class="circuit-3"
    role="list"
  >
    <li>
      <button
        aria-current="true"
        aria-label="Go to page 1"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _primary_892426 circuit-4"
        title="Go to page 1"
      >
        <span
          class="_spinner_892426 circuit-2"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 2"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-4"
        title="Go to page 2"
      >
        <span
          class="_spinner_892426 circuit-2"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 3"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-4"
        title="Go to page 3"
      >
        <span
          class="_spinner_892426 circuit-2"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 4"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-4"
        title="Go to page 4"
      >
        <span
          class="_spinner_892426 circuit-2"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          4
        </span>
      </button>
    </li>
    <li>
      <button
        aria-current="false"
        aria-label="Go to page 5"
        class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-4"
        title="Go to page 5"
      >
        <span
          class="_spinner_892426 circuit-2"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          5
        </span>
      </button>
    </li>
  </ol>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-14"
    title="Next"
  >
    <span
      class="_spinner_892426 circuit-2"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Next
      </span>
    </span>
  </button>
</nav>
`;

exports[`Pagination > with more than 5 pages > should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 12px;
}

.circuit-1 {
  margin-right: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.circuit-2 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-3[disabled],
.circuit-3.cui-field-disabled {
  pointer-events: none;
}

.circuit-4 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-5 {
  display: inline-block;
  margin-bottom: 4px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

[disabled] .circuit-5,
.cui-field-disabled .circuit-5 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-6 {
  color: var(--cui-fg-normal);
  display: block;
  position: relative;
}

.circuit-7 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: var(--cui-fg-normal);
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-7:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-7::-ms-expand {
  display: none;
}

.circuit-7:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-7:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-7:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-8 {
  color: var(--cui-fg-subtle);
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-8 {
  display: none;
}

.circuit-9 {
  color: var(--cui-fg-subtle);
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-9 {
  display: none;
}

.circuit-10 {
  margin-left: 12px;
}

.circuit-11 {
  margin-left: 12px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

<nav
  aria-label="Pagination"
  class="circuit-0"
  role="navigation"
>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-1"
    disabled=""
    title="Previous"
  >
    <span
      class="_spinner_892426 circuit-2"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Previous
      </span>
    </span>
  </button>
  <div
    class=" circuit-3"
  >
    <label
      class="circuit-4"
      for=":r0:"
    >
      <span
        class="circuit-5"
      >
        Pagination
      </span>
    </label>
    <div
      class="circuit-6"
    >
      <select
        aria-describedby=":r1:"
        class="circuit-7"
        id=":r0:"
      >
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
        <option
          value="5"
        >
          5
        </option>
        <option
          value="6"
        >
          6
        </option>
        <option
          value="7"
        >
          7
        </option>
        <option
          value="8"
        >
          8
        </option>
        <option
          value="9"
        >
          9
        </option>
        <option
          value="10"
        >
          10
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="circuit-8"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="circuit-9"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
          fill="currentColor"
        />
      </svg>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
  <span
    class="circuit-10"
  >
    of 10
  </span>
  <button
    class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 _kilo_f6dd9a circuit-11"
    title="Next"
  >
    <span
      class="_spinner_892426 circuit-2"
    >
      <span
        class="_hide-visually_73b4bb"
      />
    </span>
    <span
      class="_content_892426"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
          fill="currentColor"
        />
      </svg>
      <span
        class="_hide-visually_73b4bb"
      >
        Next
      </span>
    </span>
  </button>
</nav>
`;
